RESOLVED FIXED286917
Trusted Types incorrectly allows a policy name blocked by an enforced policy but allowed by a report-only policy
https://bugs.webkit.org/show_bug.cgi?id=286917
Summary Trusted Types incorrectly allows a policy name blocked by an enforced policy ...
Luke Warlow
Reported 2025-02-03 05:28:38 PST
See https://wpt.live/trusted-types/trusted-types-reporting.html the second subtest fails as a result of this bug
Attachments
Luke Warlow
Comment 1 2025-02-03 14:10:22 PST
EWS
Comment 2 2025-02-05 06:59:19 PST
Committed 289865@main (dd5c487fbead): <https://commits.webkit.org/289865@main> Reviewed commits have been landed. Closing PR #39934 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-02-05 07:00:14 PST
Note You need to log in before you can comment on or make changes to this bug.