Trusted Types policy name CSP logic incorrectly handles multiple directives https://bugs.webkit.org/show_bug.cgi?id=286917

Reviewed by Tim Nguyen.

Previously the violation disposition could get incorrectly moved back to "Allowed" by a later
CSP header. This patch updates the logic to correct this.

Now once a header disallows a policy name it stays disallowed.

* LayoutTests/imported/w3c/web-platform-tests/trusted-types/trusted-types-reporting-expected.txt:
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/trusted-types/trusted-types-reporting-expected.txt:
* LayoutTests/platform/win/imported/w3c/web-platform-tests/trusted-types/trusted-types-reporting-expected.txt:
* Source/WebCore/page/csp/ContentSecurityPolicy.cpp:
(WebCore::ContentSecurityPolicy::allowTrustedTypesPolicy const):
* Source/WebCore/page/csp/ContentSecurityPolicyTrustedTypesDirective.cpp:
(WebCore::ContentSecurityPolicyTrustedTypesDirective::allows const):

Canonical link: https://commits.webkit.org/289865@main